--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-server.port = 9090
+server.port: 9090
+ssl.keystoreFile: keystore.p12
+ssl.keystorePass: changeit
+ssl.keystoreType: PKCS12
+ssl.port: 9091
