--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,13 @@ ssl.keystoreFile: keystore.p12
 ssl.keystorePass: changeit
 ssl.keystoreType: PKCS12
 ssl.port: 9091
+
+spring.jpa.database=POSTGRESQL
+spring.jpa.show-sql=false
+spring.jpa.hibernate.ddl-auto=update
+
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://localhost/joggingtracker
+spring.datasource.username=postgres
+spring.datasource.password=admin
