--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,7 @@ buildscript {
 apply plugin: 'java'
 apply plugin: 'spring-boot'
 apply plugin: 'groovy'
+apply plugin: 'jacoco'
 
 allprojects {
     targetCompatibility = 1.8
