--- a/build.gradle
+++ b/build.gradle
@@ -45,10 +45,13 @@ dependencies {
     compile('org.hsqldb:hsqldb')
     compile 'postgresql:postgresql:9.1-901-1.jdbc4'
 
+    compile 'com.google.guava:guava:17.0'
+
     testCompile("org.codehaus.groovy:groovy-all:2.2.0")
     testCompile("com.fasterxml.jackson.core:jackson-databind")
     testCompile("org.spockframework:spock-core:0.7-groovy-2.0")
     testCompile("org.codehaus.groovy.modules.http-builder:http-builder:0.7+")
+    testCompile 'cglib:cglib-nodep:3.1'
 }
 
 task wrapper(type: Wrapper) {
