--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,11 @@
 buildscript {
     repositories {
         mavenCentral()
+        maven { url 'http://dl.bintray.com/vermeulen-mp/gradle-plugins' }
     }
     dependencies {
-        classpath("org.springframework.boot:spring-boot-gradle-plugin:1.1.4.RELEASE")
+        classpath "org.springframework.boot:spring-boot-gradle-plugin:1.1.4.RELEASE"
+        classpath "com.wiredforcode:gradle-heroku-plugin:1.0.0"
     }
 }
 
@@ -11,6 +13,16 @@ apply plugin: 'java'
 apply plugin: 'spring-boot'
 apply plugin: 'groovy'
 //apply plugin: 'jacoco'
+apply plugin: 'heroku'
+
+heroku {
+    apiKey = '35408564-78c5-4cb1-9b1b-eceef41284c7'
+
+    appName = 'jogging-tracker'
+
+    //buildpack = 'http://somebuildpack'
+}
+
 
 allprojects {
     targetCompatibility = 1.8
@@ -56,5 +68,5 @@ dependencies {
 }
 
 task wrapper(type: Wrapper) {
-    gradleVersion = '1.12'
+    gradleVersion = '2.0'
 }
