fixed stage task and certificate loading from jar.

--- a/build.gradle
+++ b/build.gradle
@@ -70,4 +70,4 @@ task wrapper(type: Wrapper) {
     gradleVersion = '2.0'
 }
 
-task stage(dependsOn: ['clean', 'installApp'])
+task stage(dependsOn: ['clean', 'build'])
