--- a/src/main/resources/dev.application.properties
+++ b/src/main/resources/dev.application.properties
@@ -10,6 +10,6 @@ spring.jpa.hibernate.ddl-auto=update
 
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://ec2-54-243-49-82.compute-1.amazonaws.com:5432/d8uvoe9pl93p7u
-spring.datasource.username=bixutrmllyezii
-spring.datasource.password=WfwMFiYrqyE9aoJgB35bjNI17i
+spring.datasource.url=jdbc:postgresql://localhost/joggingtracker
+spring.datasource.username=postgres
+spring.datasource.password=admin
