--- a/src/main/resources/dev.application.properties
+++ b/src/main/resources/dev.application.properties
@@ -9,7 +9,15 @@ spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=update
 
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost/joggingtracker
-spring.datasource.username=postgres
-spring.datasource.password=admin
+datasource.driverClassName=org.postgresql.Driver
+datasource.dbUrl=jdbc:postgresql://localhost/joggingtracker
+datasource.dbUsername=postgres
+datasource.dbPassword=admin
+datasource.initialPoolSize=10
+datasource.maxActivePoolSize=100
+#spring.datasource.driverClassName=org.postgresql.Driver
+#spring.datasource.url=jdbc:postgresql://localhost/joggingtracker
+#spring.datasource.username=postgres
+#spring.datasource.password=admin
+#spring.datasource.pool.initialSize=10
+#spring.datasource.pool.maxActive=100
